// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-comments add comments: add comments 1`] = `
"
\\"use strict\\";

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
\\"use strict\\";
"
`;

exports[`add-comments already @flow: already @flow 1`] = `
"
// @flow
const a = 1

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
const a = 1;
"
`;

exports[`add-comments func: func 1`] = `
"
function sum(a, b) { return a + b; }

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow

function sum(a, b) {
  return a + b;
}
"
`;

exports[`add-comments var: var 1`] = `
"
const a = 2

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
const a = 2;
"
`;

exports[`default add comment top: add comment top 1`] = `
"
var a = 'a'
// @flow

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
var a = 'a';
"
`;

exports[`remove-comments remove comments: remove comments 1`] = `
"
// @flow

      ↓ ↓ ↓ ↓ ↓ ↓


"
`;
